Implemented waitlist on front-end

--- a/Layers/presentation_layer/template/waitList.html
+++ b/Layers/presentation_layer/template/waitList.html
@@ -1,7 +1,7 @@
 {{define "waitList"}}
 <div id="actionWrapperWaitlist">
   <h4 class="actionTitle">Waiting List <i class="material-icons">av_timer</i> </h4>
-  <div class="waitList-table">
+  <div class="waitlist-table">
   </div>
 </div>
 {{end}}
