--- a/Layers/presentation_layer/css/tables.css
+++ b/Layers/presentation_layer/css/tables.css
@@ -19,7 +19,7 @@
   &:nth-of-type(odd){
     background: #e9e9e9;
   }
-  .reservations-header{
+.table-header{
     font-weight: 900;
     color: #ffffff;
     background: #800000;
