--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -49,21 +49,14 @@
                 <div>
                     <div class="chip">
                         <button id="logout" onclick="logout()">Logout</button>
-                        <img src="images/user.png" alt="Student"> David Dubé
+                        <img src="images/user.png" alt="Student"><span>Student ID: </span> <span id="username"></span>
                     </div>
                     <div id="todayDate">
                     </div>
                 </div>
         </div>
     </div>
-    <div id="roomTabs">
-        <button id="active" onclick="changeRoom(1, this)" class="tab">Room 1</button>
-        <button onclick="changeRoom(2, this)" class="tab">Room 2</button>
-        <button onclick="changeRoom(3, this)" class="tab">Room 3</button>
-        <button onclick="changeRoom(4, this)" class="tab">Room 4</button>
-        <button onclick="changeRoom(5, this)" class="tab">Room 5</button>
 
-    </div>
     <div class="content">
         {{template "menu"}} 
         <div class="flex-wrapper">
