--- a/Layers/presentation_layer/template/header.html
+++ b/Layers/presentation_layer/template/header.html
@@ -27,7 +27,7 @@
 			position: absolute;
 			border-top: 190px solid #580709;
 			border-right: 100px solid transparent;
-			border-bottom: 100px solid transparent;
+			/*border-bottom: 100px solid transparent;*/
 			border-left: 100px solid transparent;
 			left: calc(50% - 100px);
 			top: -5px;
