--- a/Layers/presentation_layer/template/roomScheduler.html
+++ b/Layers/presentation_layer/template/roomScheduler.html
@@ -1,3 +1,13 @@
 {{define "roomScheduler"}}
-<div id="scheduler"></div>
+<div id="roomTabs">
+    <button id="active" onclick="changeRoom(1, this)" class="tab">Room 1</button>
+    <button onclick="changeRoom(2, this)" class="tab">Room 2</button>
+    <button onclick="changeRoom(3, this)" class="tab">Room 3</button>
+    <button onclick="changeRoom(4, this)" class="tab">Room 4</button>
+    <button onclick="changeRoom(5, this)" class="tab">Room 5</button>
+
+    <div id="scheduler"></div>
+
+</div>
+
 {{end}}
